Fixed jump-to sections and padding on sections + responsive

--- a/css/index.css
+++ b/css/index.css
@@ -189,3 +189,14 @@ body .music-bg {
   max-width: 20px;
   @apply inline-block mx-2
 }
+
+.nav-marker {
+  position: absolute;
+  top: -50px;
+}
+
+@media (min-width: 768px) {
+  .nav-marker {
+    top: 10px;
+  }
+}
